2014-10-12 00:00 plcl

    * Migration to Qt5
    * Release 1.0.0

2012-05-28 00:00 plcl

    * assigned shortcuts for keyboard media keys
    * Release 0.10.1

2011-02-05 00:00 plcl

    * Turkish translation added, by Server Acim

2010-09-16 00:00 plcl

    * docbook version update

2010-09-10 00:00 plcl

    * drumstick: sync release 0.5
    * request realtime priority for the MIDI input thread 

2010-06-06 00:00 plcl

    * Release 0.10.0

2010-06-05 00:00 plcl 

    * German translation updated, by Rene Landert
    * Custom pattern samples
    * release candidate

2010-05-23 00:00 plcl

    * Enable the standard toolbar
    * Optionally hide the fake toolbar
    * Import/export patterns 
    * Updated translation template

2010-05-20 00:00 plcl

    * Using an instrument definition file in .INS format
    * Custom patterns
    * Pattern editor (RFE #2517833)

2010-05-01 00:00 plcl

    * German translation, by Rene Landert

2010-04-19 00:00 plcl

    * Release 0.9.3 

2010-02-20 00:00 plcl

    * aseqmm renamed to drumstick

2009-12-23 00:00 plcl

    * Release 0.9.2
    * Fixed dynamic linking issues with aseqmm
    * assorted fixes 

2009-12-21 00:00 plcl

    * Build system improvements
    * Updated Czech translation, by Pavel Fric

2009-12-14 00:00 julienrf

    * French translation, by Julien Richard-Foy
    * GUI improvements

2009-12-13 00:00 plcl

    * version string 0.9.2cvs
    * Czech translation. Thanks to Pavel Fric

2009-12-12 00:00 plcl

    * version 0.9.1

2009-08-11 17:30 plcl

    * synchronize with current aseqmm tree

2009-08-07 23:00 plcl

    * fix for bug #2795019

2009-05-18 12:00 plcl

    * feature Request #2792930

2009-02-08 23:00 plcl

    * Version string 0.9.1cvs
    * new configuration option: Styled Knobs

2008-12-29 00:00 plcl

	* Version 0.9.0

2008-11-23 00:00 plcl

	* Converted to KDE4/Qt4

2008-03-24 00:00 plcl

	* Fix the crash at startup when ALSA is not loaded
	* Documentation updates
	* Version 0.8.2
