@@ -2,7 +2,7 @@ TEMPLATE = app
 TARGET = kmetronome
 DEPENDPATH += . src
 INCLUDEPATH += . src
-VERSION = 1.0.0
+VERSION = 1.0.1
 QT += core gui widgets dbus svg
 
 DEFINES += VERSION=$$VERSION
